{
  "version": 4,
  "terraform_version": "0.14.0",
  "serial": 76,
  "lineage": "ac3aba23-7fbb-caac-bd2d-896fa37de489",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-04d6bc2f0f14409ef",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-140-137-218.us-east-2.compute.amazonaws.com",
            "public_ip": "3.140.137.218",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "blog-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09558250a3419e7d0",
            "arn": "arn:aws:ec2:us-east-2:991720585140:instance/i-06c89ef7dce100886",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06c89ef7dce100886",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ohio-server",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c78150c4955625e6",
            "private_dns": "ip-172-18-125-20.us-east-2.compute.internal",
            "private_ip": "172.18.125.20",
            "public_dns": "ec2-3-16-43-99.us-east-2.compute.amazonaws.com",
            "public_ip": "3.16.43.99",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-02564fad141229a85",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f8891545bad3b9bc",
            "tags": {
              "Name": "bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ed5e9e2905e10352"
            ]
          },
          "dependencies": [
            "aws_key_pair.ohio-server",
            "aws_security_group.blog-bastion",
            "aws_subnet.blog-public2",
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0be67fbef55da254f",
            "arn": "arn:aws:ec2:us-east-2:991720585140:instance/i-0447725d3d314ef56",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0447725d3d314ef56",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ohio-server",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0dcaca653a16991e9",
            "private_dns": "ip-172-18-40-193.us-east-2.compute.internal",
            "private_ip": "172.18.40.193",
            "public_dns": "ec2-3-12-153-87.us-east-2.compute.amazonaws.com",
            "public_ip": "3.12.153.87",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-017dd57008ba47143",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ce3ee0689dd11649",
            "tags": {
              "Name": "webserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03b66c7a9278c46e6"
            ]
          },
          "dependencies": [
            "aws_db_instance.blog-db",
            "aws_db_subnet_group.blogdb-subnet",
            "aws_instance.bastion",
            "aws_key_pair.ohio-server",
            "aws_security_group.blog-bastion",
            "aws_security_group.blog-database",
            "aws_security_group.blog-webserver",
            "aws_subnet.blog-private1",
            "aws_subnet.blog-private2",
            "aws_subnet.blog-public1",
            "aws_subnet.blog-public2",
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "blog-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:991720585140:internet-gateway/igw-0d3d485a19ecd78bd",
            "id": "igw-0d3d485a19ecd78bd",
            "owner_id": "991720585140",
            "tags": {
              "Name": "blog-igw"
            },
            "vpc_id": "vpc-0a273d5377e144d48"
          },
          "dependencies": [
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "blog-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04d6bc2f0f14409ef",
            "id": "nat-01379e6932a162e98",
            "network_interface_id": "eni-0d80ac3a96ae0b65f",
            "private_ip": "172.18.123.101",
            "public_ip": "3.140.137.218",
            "subnet_id": "subnet-0f8891545bad3b9bc",
            "tags": {
              "Name": "blog-NAT"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.blog-public2",
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "blog-private-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-085b5ce35e42a8ad9",
            "owner_id": "991720585140",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01379e6932a162e98",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "blog-private-RT"
            },
            "vpc_id": "vpc-0a273d5377e144d48"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.blog-nat",
            "aws_subnet.blog-public2",
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "blog-public-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02a88af90758619a8",
            "owner_id": "991720585140",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d3d485a19ecd78bd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "blog-public-RT"
            },
            "vpc_id": "vpc-0a273d5377e144d48"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.blog-igw",
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "blog-private1-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0622279cacbd4494a",
            "route_table_id": "rtb-085b5ce35e42a8ad9",
            "subnet_id": "subnet-046cbc0032495d104"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.blog-nat",
            "aws_route_table.blog-private-RT",
            "aws_subnet.blog-private1",
            "aws_subnet.blog-public2",
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "blog-private1-RT2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0856059a8ab562e65",
            "route_table_id": "rtb-085b5ce35e42a8ad9",
            "subnet_id": "subnet-01bda1a8695ff7d34"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.blog-nat",
            "aws_route_table.blog-private-RT",
            "aws_subnet.blog-private2",
            "aws_subnet.blog-public2",
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "blog-public-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d7d288a109d4135",
            "route_table_id": "rtb-02a88af90758619a8",
            "subnet_id": "subnet-0ce3ee0689dd11649"
          },
          "dependencies": [
            "aws_internet_gateway.blog-igw",
            "aws_route_table.blog-public-RT",
            "aws_subnet.blog-public1",
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "blog-public2-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a85ebfa15b02c7e",
            "route_table_id": "rtb-02a88af90758619a8",
            "subnet_id": "subnet-0f8891545bad3b9bc"
          },
          "dependencies": [
            "aws_internet_gateway.blog-igw",
            "aws_route_table.blog-public-RT",
            "aws_subnet.blog-public2",
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "blog-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:991720585140:security-group/sg-0ed5e9e2905e10352",
            "description": "Allow 22 from all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ed5e9e2905e10352",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow 22 from all",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow from all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "ssh access",
            "name_prefix": "",
            "owner_id": "991720585140",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "blog-bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a273d5377e144d48"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "blog-database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:991720585140:security-group/sg-0d25fb5447b0182fc",
            "description": "Allow 22 from bastion, 3306 from webserver",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d25fb5447b0182fc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "allow 22 from all",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ed5e9e2905e10352"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "allow 3306 from webserver",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03b66c7a9278c46e6"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "database access",
            "name_prefix": "",
            "owner_id": "991720585140",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "blog-database"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a273d5377e144d48"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.blog-bastion",
            "aws_security_group.blog-webserver",
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "blog-webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:991720585140:security-group/sg-03b66c7a9278c46e6",
            "description": "Allow 80 from all, 22 from bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03b66c7a9278c46e6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow 443 from all",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow 80 from all",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "allow 22 from all",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ed5e9e2905e10352"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "webserver access",
            "name_prefix": "",
            "owner_id": "991720585140",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "blog-webserver"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a273d5377e144d48"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.blog-bastion",
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "blog-private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:991720585140:subnet/subnet-046cbc0032495d104",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "172.18.128.0/18",
            "id": "subnet-046cbc0032495d104",
            "map_public_ip_on_launch": false,
            "owner_id": "991720585140",
            "tags": {
              "Name": "blog-private1"
            },
            "vpc_id": "vpc-0a273d5377e144d48"
          },
          "dependencies": [
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "blog-private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:991720585140:subnet/subnet-01bda1a8695ff7d34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.18.192.0/18",
            "id": "subnet-01bda1a8695ff7d34",
            "map_public_ip_on_launch": false,
            "owner_id": "991720585140",
            "tags": {
              "Name": "blog-private2"
            },
            "vpc_id": "vpc-0a273d5377e144d48"
          },
          "dependencies": [
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "blog-public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:991720585140:subnet/subnet-0ce3ee0689dd11649",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.18.0.0/18",
            "id": "subnet-0ce3ee0689dd11649",
            "map_public_ip_on_launch": true,
            "owner_id": "991720585140",
            "tags": {
              "Name": "blog-public1"
            },
            "vpc_id": "vpc-0a273d5377e144d48"
          },
          "dependencies": [
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "blog-public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:991720585140:subnet/subnet-0f8891545bad3b9bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.18.64.0/18",
            "id": "subnet-0f8891545bad3b9bc",
            "map_public_ip_on_launch": true,
            "owner_id": "991720585140",
            "tags": {
              "Name": "blog-public2"
            },
            "vpc_id": "vpc-0a273d5377e144d48"
          },
          "dependencies": [
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "blog",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:991720585140:vpc/vpc-0a273d5377e144d48",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.18.0.0/16",
            "default_network_acl_id": "acl-00fa5a1bf9ec258fa",
            "default_route_table_id": "rtb-0db73c40280b4c56e",
            "default_security_group_id": "sg-04ea2396c0fa09b2e",
            "dhcp_options_id": "dopt-5479f23f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a273d5377e144d48",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0db73c40280b4c56e",
            "owner_id": "991720585140",
            "tags": {
              "Name": "blog"
            }
          }
        }
      ]
    }
  ]
}